# middleout

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.middleout-logs/: audit.jsonl  runtime_settings.json
benchmarks/: __init__.py  bench_similarity.py
docs/: ENGINES.md
examples/: sample_request.json
src/middleout_claude_proxy.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/middleout_proxy/: __init__.py  adaptive.py  audit.py  budget.py  cache_wall.py  caveman.py  compression.py  config.py  cost.py  dashboard.py  jl.py  json_aware.py  lingua.py  lsh_dedupe.py  metrics.py  policies.py  preview.py  rate_limit.py  replay.py  rtk.py  server.py  token_estimate.py  volatile.py
src/middleout_proxy/cache/: __init__.py  embedders.py  l1.py  l2.py  normalize.py  vector_stores.py
src/middleout_proxy/engines/: __init__.py  base.py  comment_strip.py  diff_compactor.py  json_collapse.py  log_collapse.py  path_collapse.py  stack_trace.py
src/middleout_proxy/providers/: __init__.py  anthropic.py  base.py  gemini.py  ollama.py  openai.py  registry.py
src/middleout_proxy/sim/: __init__.py  jl_index.py  lsh.py  minhash.py  simhash.py
tests/: conftest.py  test_adaptive.py  test_admin_auth.py  test_anthropic_cache_protection.py  test_audit.py  test_auth_audit.py  test_brain_endpoints.py  test_budget.py  test_budget_enforcement.py  test_cache_l1.py  test_cache_l2.py  test_cache_wall.py  test_caveman.py  test_compression.py  test_compression_cache.py  test_compression_edge.py  test_cost.py  test_dashboard.py  test_embedders.py  test_engine_comment_strip.py  test_engine_diff_compactor.py  test_engine_integration.py  test_engine_json_collapse.py  test_engine_log_collapse.py  test_engine_path_collapse.py  test_engine_registry.py  test_engine_stack_trace.py  test_jl.py  test_json_aware.py  test_l1_integration.py  test_l2_integration.py  test_l2_margin.py  test_lingua.py  test_lsh_dedupe.py  test_metrics.py  test_observability.py  test_policies.py  test_preview.py  test_providers.py  test_rate_limit.py  (+14 more)
