[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "middleout-claude-proxy"
version = "0.2.0"
description = "A strict Claude Code subscription OAuth passthrough proxy with prompt-aware middle-out compaction and JL-style near-duplicate sketches."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Local project" }]
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "httpx>=0.26",
  "pydantic>=2.0"
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.5"]
# Brain proxy phase-2/3/4 extras. Pull in only the ones you need.
lingua = ["llmlingua>=0.2.2"]
qdrant = ["qdrant-client>=1.7"]
openai = ["openai>=1.0"]
http2 = ["h2>=4.0"]
# Convenience meta-extra that installs every brain dep.
brain = [
  "llmlingua>=0.2.2",
  "qdrant-client>=1.7",
  "openai>=1.0",
  "h2>=4.0",
]

[project.scripts]
middleout-proxy = "middleout_proxy.server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
